main.css
/* #region */

/* ==========================================================================
    Fonts
    ========================================================================== */

/* @import url("https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,700"); */
@import url("https://fonts.googleapis.com/css?family=Roboto+Slab|Source+Serif+Pro:400,700");

@import url("https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i");

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
  line-height: 1.15; /* 1 */
  -webkit-text-size-adjust: 100%; /* 2 */
}

body {
  margin: 0;
}

main {
  display: block;
}

h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

hr {
  box-sizing: content-box; /* 1 */
  height: 0; /* 1 */
  overflow: visible; /* 2 */
}

pre {
  font-family: monospace, monospace; /* 1 */
  font-size: 1em; /* 2 */
}

a {
  background-color: transparent;
}

abbr[title] {
  border-bottom: none; /* 1 */
  text-decoration: underline; /* 2 */
  text-decoration: underline dotted; /* 2 */
}

b,
strong {
  font-weight: bolder;
}

code,
kbd,
samp {
  font-family: monospace, monospace; /* 1 */
  font-size: 1em; /* 2 */
}

small {
  font-size: 80%;
}

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sub {
  bottom: -0.25em;
}

sup {
  top: -0.5em;
}

img {
  border-style: none;
}

button,
input,
optgroup,
select,
textarea {
  font-family: inherit; /* 1 */
  font-size: 100%; /* 1 */
  line-height: 1.15; /* 1 */
  margin: 0; /* 2 */
}

button,
input {
  /* 1 */
  overflow: visible;
}

button,
select {
  /* 1 */
  text-transform: none;
}

button,
[type="button"],
[type="reset"],
[type="submit"] {
  -webkit-appearance: button;
}

button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

button:-moz-focusring,
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

fieldset {
  padding: 0.35em 0.75em 0.625em;
}

legend {
  box-sizing: border-box; /* 1 */
  color: inherit; /* 2 */
  display: table; /* 1 */
  max-width: 100%; /* 1 */
  padding: 0; /* 3 */
  white-space: normal; /* 1 */
}

progress {
  vertical-align: baseline;
}

textarea {
  overflow: auto;
}

[type="checkbox"],
[type="radio"] {
  box-sizing: border-box; /* 1 */
  padding: 0; /* 2 */
}

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

[type="search"] {
  -webkit-appearance: textfield; /* 1 */
  outline-offset: -2px; /* 2 */
}

[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

::-webkit-file-upload-button {
  -webkit-appearance: button; /* 1 */
  font: inherit; /* 2 */
}

details {
  display: block;
}

summary {
  display: list-item;
}

template {
  display: none;
}

[hidden] {
  display: none;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}
/* #endregion */

/* ==========================================================================
   Custom styles
   ========================================================================== */
/* Chrome/Firefox native smooth scroll */
html {
  scroll-behavior: smooth;
}

a:active,
a:focus {
  outline: 0;
  border: none;
  outline-style: none;
  -moz-outline-style: none;
}

p::-moz-selection {
  color: #fff;
  background-color: #ff4648;
}
p::selection {
  color: #fff;
  background-color: #ff4648;
}

body {
  text-rendering: optimizeLegibility;
  background-color: #1c1c23;
  background-image: url("/images/noisy-texture3.png");
  color: #e0e0e0;
}

h1 {
  color: #f9d05c;
  font-weight: 700;
  /* font-family: "Source Serif Pro", serif; */
  font-family: "PT Serif", serif;
}

p {
  font-family: "Roboto Slab", serif;
  font-size: 1.1rem;
  line-height: 1.7;
  font-weight: 300;
}

.main-wrapper {
  max-width: 1920px;
  display: grid;
  grid-template-columns: 1fr 1fr;
}
/* ==========================================================================
    Home page
    ========================================================================== */

.hello {
  font-size: 3.2rem;
}

header {
  grid-column: 1 / -1;
}

.navigation {
  grid-column: 1 / -1;
}

nav {
  grid-auto-columns: 1fr;
  padding: 1rem 3rem;
}

nav .navigation {
  color: #f9d05c;
}
/* Large */
.navigation ul {
  list-style-type: none;
  display: flex;
  flex-flow: row wrap;
  /* This aligns items to the end line on main-axis */
  justify-content: flex-end;
}

.navigation ul li {
  padding-left: 1rem;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

.navigation ul li a {
  color: #f9d05c;
  text-transform: uppercase;
  text-decoration: none;
}

.navigation ul li a:active {
  color: #f9d05c;
  text-transform: uppercase;
  border-bottom: 5px solid #f9d05c;
  text-decoration: #f9d05c;
  background-color: #e0e0e0 !important;
}

.main,
.description {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 1rem;
  padding: 3rem 3rem 0 3rem;
}

.description {
  background-color: #f9d05c;
  background-image: url("./images/yellow-noise1.png");
  color: rgb(49, 49, 49);
  font-family: "Roboto Slab", serif;
  font-size: 1.1rem;
  line-height: 1.7;
  /* transform: skewY(-4deg); */
  transform-origin: 0;
  overflow: hidden;
  padding: 3rem;
  /* clip-path: polygon(0 10%, 100% 0, 100% 100%, 0% 100%); */
  /* clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 5vw));
  -webkit-clip-path: polygon(0 14%, 100% 0, 100% 89%, 0% 100%);
  clip-path: polygon(0 14%, 100% 0, 100% 89%, 0% 100%); */
}

.description h2 {
  color: rgb(49, 49, 49);
  font-family: "PT Serif", serif;
  font-size: 2.8em;
  font-weight: 700;
  grid-column: 1 / -1;
  justify-self: center;
  margin-top: 0;
  /* transform: skewY(4deg); */
}

.description p {
  color: rgb(49, 49, 49);
  font-family: "Roboto Slab", serif;
  font-size: 1.1rem;
  line-height: 1.7;
  font-weight: normal;
  /* transform: skewY(4deg); */
}

.description h3 {
  display: flex;
  justify-content: center;
  margin-bottom: 0;
}

.hi {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  color: #626264;
}

.down-arrow {
  display: block;
  width: 30px;
  margin: 1em auto;
  color: #706901;
}

.background-text {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 500px;
  font-weight: 700;
  color: #2a2a33;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  overflow: hidden;
}

main.main {
  overflow: hidden;
  /* position: relative; */
  /* put this after you add content in pages to avoid horizontal scroll */
}

.availability {
  grid-column: -1 / 1;
  padding: 3rem;
}

.availability span {
  color: rgb(65, 202, 47);
  font-family: "Roboto Slab", serif;
}

.availability ul li {
  font-family: "Roboto Slab", serif;
  margin-bottom: 1em;
}

.circle {
  margin-left: 30rem;
  margin-top: 2rem;
  border-radius: 50%;
  background-color: rgb(85, 235, 93);
  width: 15px;
  height: 15px;
  position: absolute;
  opacity: 0;
  animation: scaleIn 3.5s infinite cubic-bezier(0.36, 0.11, 0.89, 0.32);
}

@keyframes scaleIn {
  from {
    transform: scale(0.5, 0.5);
    opacity: 0.5;
  }
  to {
    transform: scale(2.5, 2.5);
    opacity: 0;
  }
}

@-webkit-keyframes active {
  0% {
    -webkit-transform: scale(0.1);
    opacity: 1;
  }
  70% {
    -webkit-transform: scale(1.5);
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}

@keyframes active {
  0% {
    transform: scale(0.1);
    opacity: 1;
  }
  70% {
    transform: scale(1.5);
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}

/* ==========================================================================
   Media Queries for Responsive Design.
   ========================================================================== */

/* Small screens */
@media all and (max-width: 500px) {
  .navigation ul {
    /* On small screens, we are no longer using row direction but column */
    flex-direction: column;
  }

  nav {
    grid-auto-columns: 1fr;
    padding: 0;
  }

  .main {
    grid-template-columns: repeat(1, 1fr);
    padding: 1rem;
  }

  h1 {
    font-size: 2.5rem !important;
  }

  p {
    font-size: 1rem;
  }
}

/* Medium screens */
@media all and (max-width: 800px) {
  .navigation ul {
    /* When on medium sized screens, we center it by evenly distributing empty space around items */
    justify-content: space-around;
  }
}

/* Playground */

.link {
  outline: none;
  text-decoration: none;
  position: relative;
  display: inline-block;
}

.link--playground {
  font-weight: 900;
  overflow: hidden;
}

.link--playground::after {
  content: "";
  position: absolute;
  height: 5px;
  width: 100%;
  top: 50%;
  margin-top: -8px;
  right: 0;
  background: #f9f9f9;
  transform: translate3d(-100%, 0, 0);
  transition: transform 0.4s;
  transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
}

.link--playground:hover::after {
  transform: translate3d(100%, 0, 0);
}

.link--playground::before {
  content: attr(data-letters);
  position: absolute;
  z-index: 2;
  overflow: hidden;
  color: #edf05a;
  white-space: nowrap;
  width: 0%;
  transition: width 0.4s 0.3s;
}

.link--playground:hover::before {
  width: 100%;
}

